--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,7 @@
 html, body, .container {
-    height: 100%;
+    height: 87%;
+    /*position: fixed;
+    left: 3%;*/
 }
 
 img {
@@ -35,4 +37,43 @@ p {
 	text-align: center;
 	font-family: "Courier New";
 }
+
+
+
+#bio {
+	display: none;
+	position: absolute;
+    width:100%;
+    border:1px solid #d3d3d3;
+}
+
+#resume {
+	display: none;
+	z-index: -1;
+	position: absolute;
+    width:100%;
+    border:1px solid #d3d3d3;
+}
+
+#gym {
+	display: none;
+	position: absolute;
+    width:100%;
+    border:1px solid #d3d3d3;
+}
+
+#journalism {
+	display: none;
+	position: absolute;
+    width:100%;
+    border:1px solid #d3d3d3;
+}
+
+#music {
+	display: none;
+	position: absolute;
+    width:100%;
+    border:1px solid #d3d3d3;
+}
+
 
